# legendary-doodle

./: .gitignore  CMakeLists.txt
H1/: main.cpp
H2/: main.cpp
H3/: main.cpp
H4/: account.txt  doughnuts.txt  main.cpp
Project/: main.cpp
Project/database/: Database.cpp  Database.h
Project/manager/: FileManager.cpp  FileManager.h
Project/utils/: Utils.cpp  Utils.h
Tests/: test1.cpp  test2.cpp
